--- a/02_target做的选项卡.html
+++ b/02_target做的选项卡.html
@@ -12,7 +12,7 @@
 				height: 200px;
 				text-align: center;
 				font: 20px/200px "微软雅黑";
-				background-color: red;
+				background-color: blue;
 				display: none;
 			}
 
